components/policies/development/konflux-rbac/restrict-binding-serviceaccounts/update/.chainsaw-test/resources/invalid-serviceaccounts-rolebinding-with-label.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-serviceaccounts-rolebinding
  labels:
    test.example.com/updated: "true"
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: not-konflux-viewer-user-actions
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: my-group
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: my-user
- apiGroup: ""
  kind: ServiceAccount
  name: konflux-bot-0
