components/policies/development/konflux-rbac/restrict-binding-serviceaccounts/update/.chainsaw-test/resources/valid-konflux-bot-allowed-clusterrole-rolebinding-with-label.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: valid-konflux-bot-allowed-clusterrole-rolebinding
  labels:
    test.example.com/updated: "true"
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: konflux-releaser-bot
subjects:
- kind: ServiceAccount
  name: konflux-bot-0
